src/logger/objects/WELLog__c/WELLog__c.object-meta.xml
<CustomObject>
    <label>WELLog</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>