src/logger/objects/WELLog__c/fields/LVL__c.field-meta.xml
<CustomField>
    <fullName>LVL__c</fullName>
    <label>Level</label>
    <length>1</length>
    <type>Text</type>
</CustomField>