src/logger/objects/WELLog__c/fields/MSG__c.field-meta.xml
<CustomField>
    <fullName>MSG__c</fullName>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>