src/logger/objects/WELLog__c/fields/NSP__c.field-meta.xml
<CustomField>
    <fullName>NSP__c</fullName>
    <label>Namespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>