src/logger/objects/WELLog__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <defaultValue>now()</defaultValue>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>