src/logger/objects/WELLog__c/fields/TraceObject__c.field-meta.xml
<CustomField>
    <fullName>TraceObject__c</fullName>
    <label>Trace Object</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>