src/logger/objects/WELLog__c/fields/TRC__c.field-meta.xml
<CustomField>
    <fullName>TRC__c</fullName>
    <label>Trace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>