src/logger/objects/WELLog__c/fields/TST__c.field-meta.xml
<CustomField>
    <fullName>TST__c</fullName>
    <label>Timestamp</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>