src/logger/objects/WELLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Namespace__c</columns>
    <columns>Level__c</columns>
    <columns>Message__c</columns>
    <columns>TraceObject__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>